--- a/src/Pages/Error.css
+++ b/src/Pages/Error.css
@@ -1,14 +1,15 @@
-.container{
+.containerError{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
     background-color: #fff!important;
+    
 }
 .pageNotfound{
     font-size: 2rem;
-    color: #fff;
+    color: #000;
     font-weight: 700;
 }
 .pageNotfoundImage{
