--- a/src/Pages/SignIn.css
+++ b/src/Pages/SignIn.css
@@ -11,6 +11,9 @@
   height: 100vh;
   padding: 1rem;
   background-image: linear-gradient(to right, #d7d2cc 0%, #304352 100%);
+  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+  background-image: linear-gradient(to right, #f78ca0 0%, #f9748f 19%, #fd868c 60%, #fe9a8b 100%);
+  background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
 }
 .container h2 {
   font-size: 1.6rem;
@@ -29,10 +32,11 @@
   justify-content: center;
   margin-bottom: 1rem;
 }
-.logo img {
-  width: 100%;
-  height: 100%;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+
+.form img{
+  width: 100px;
+  height: 100px;
+  align-self: center;
 }
 .form {
   display: flex;
@@ -63,6 +67,7 @@
 }
 .form button {
   margin-bottom: 1rem;
+  margin-top: 1rem;
 }
 .success-message {
   color: #037536;
