--- a/src/Components/ManageUser.css
+++ b/src/Components/ManageUser.css
@@ -82,3 +82,64 @@
     }
   }
   
+
+  
+
+  .edit-form {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+  }
+  
+  .edit-form-content {
+    background-color: white;
+
+    padding: 20px;
+    border-radius: 5px;
+  }
+  
+  .edit-form-row {
+    position: relative;
+  }
+  
+  .edit-form-row:hover .editIcon {
+    display: none;
+  }
+
+  .headEdit{
+    display: flex;
+    justify-content: space-between;
+  }
+  .close-icon{
+    cursor: pointer;
+    color: #e53935;
+  }
+  .close-icon:hover{
+    color: #b71c1c;
+    background-color: transparent!important;
+  }
+  .Update-btn
+  {
+    background-color: #1e88e5;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+  }
+  .Update-btn:hover
+  {
+    background-color: #5d97ed;
+  }
+
+
+ 
+  
