--- a/src/Components/ManageUser.css
+++ b/src/Components/ManageUser.css
@@ -133,7 +133,8 @@
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
-    margin-top: 10px;
+    margin-top: 10px!important;
+    box-shadow: none;
   }
   .Update-btn:hover
   {
