--- a/src/Pages/SignIn.css
+++ b/src/Pages/SignIn.css
@@ -10,10 +10,9 @@
   min-height: 100vh;
   height: 100vh;
   padding: 1rem;
-  background-image: linear-gradient(to right, #d7d2cc 0%, #304352 100%);
-  background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
-  background-image: linear-gradient(to right, #f78ca0 0%, #f9748f 19%, #fd868c 60%, #fe9a8b 100%);
-  background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
+  background-color: #F4D03F;
+background-image: linear-gradient(132deg, #F4D03F 0%, #16A085 100%);
+
 }
 .container h2 {
   font-size: 1.6rem;
